Update !DOCTYPE .html

--- a/!DOCTYPE .html
+++ b/!DOCTYPE .html
@@ -4,10 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Infinite Chronicles</title>
-    <style>
+   <meta name="description" content="The Infinite Chronicles - A fantasy story about magic, destiny, and adventure.">
+     <style>
         /* General Styling */
         body {
-            background-image: url('images/"C:\Users\srinivas\Desktop\fantasy world.jpg"')
+            background-image: url('images/fantasy-world.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
