--- a/index.html
+++ b/index.html
@@ -168,13 +168,22 @@ James shot up in bed, his chest heaving as if he’d been running for miles. Swe
     </div>
 
     <!-- About Author -->
-    <div id="about-author" class="author-blog hidden">
-        <h2>About the Author</h2>
-        <div class="blog-post">
-            <h3>My Journey as an Author</h3>
-            <p>Welcome to my blog! I’m the author of *the Ring*, and I’m excited to share my creative journey with you. Writing has always been my passion, and this book is a dream come true. For the people who have read the book, you know that it is still not completed and you should also know that infinite chronicles is the series name and to understand this complex world, you will have to read all the books in the series which i will post soon. "The Ring" is just the firstbook. Stay tuned for updates and behind-the-scenes stories as I continue to write more for you!</p>
-        </div>
+   <div class="about-author">
+    <h2>About the Author</h2>
+    <p style="position: absolute; top: 10px; right: 20px; font-size: 18px; color: #ffcc00;">
+        Author Name = Sriram Pathruni
+    </p>
+    <div class="author-content">
+        <h3>My Journey as an Author</h3>
+        <p>
+            Welcome to my blog! I'm the author of <em>*The Ring*</em>, and I'm excited to share my creative journey with you. 
+            Writing has always been my passion, and this book is a dream come true. For the people who have read the book, 
+            you know that it is still not completed and you should also know that Infinite Chronicles is the series name and 
+            to understand this complex world, you will have to read all the books in the series which I will post soon. 
+            <em>"The Ring"</em> is just the first book. Stay tuned for updates and behind-the-scenes stories as I continue to write more for you!
+        </p>
     </div>
+</div>
 
     <!-- Footer -->
     <footer>
