--- a/index.html
+++ b/index.html
@@ -168,7 +168,14 @@ James shot up in bed, his chest heaving as if he’d been running for miles. Swe
     </div>
 
     <!-- About Author -->
-   <div class="about-author">
+ .about-author {
+    position: relative;}
+    padding: 20px;
+    background-color: #f5f5f5; /* Optional: Just to make it more readable */
+    border-radius: 8px;
+}
+
+    <div class="about-author">
     <h2>About the Author</h2>
     <p style="position: absolute; top: 10px; right: 20px; font-size: 18px; color: #ffcc00;">
         Author Name = Sriram Pathruni
@@ -184,6 +191,7 @@ James shot up in bed, his chest heaving as if he’d been running for miles. Swe
         </p>
     </div>
 </div>
+
 
     <!-- Footer -->
     <footer>
