--- a/index.html
+++ b/index.html
@@ -167,30 +167,39 @@ James shot up in bed, his chest heaving as if he’d been running for miles. Swe
         </div>
     </div>
 
-    <!-- About Author -->
- .about-author {
-    position: relative;}
-    padding: 20px;
-    background-color: #f5f5f5; /* Optional: Just to make it more readable */
-    border-radius: 8px;
-}
+<!-- About Author -->
+<style>
+    .about-author {
+        position: relative;
+        padding: 20px;
+        background-color: #f5f5f5; /* Optional: Just to make it more readable */
+        border-radius: 8px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+</style>
 
-    <div class="about-author">
+<div class="about-author">
     <h2>About the Author</h2>
-    <p style="position: absolute; top: 10px; right: 20px; font-size: 18px; color: #ffcc00;">
+    <p style="font-size: 18px; color: #ffcc00;">
         Author Name = Sriram Pathruni
     </p>
-    <div class="author-content">
-        <h3>My Journey as an Author</h3>
-        <p>
-            Welcome to my blog! I'm the author of <em>*The Ring*</em>, and I'm excited to share my creative journey with you. 
-            Writing has always been my passion, and this book is a dream come true. For the people who have read the book, 
-            you know that it is still not completed and you should also know that Infinite Chronicles is the series name and 
-            to understand this complex world, you will have to read all the books in the series which I will post soon. 
-            <em>"The Ring"</em> is just the first book. Stay tuned for updates and behind-the-scenes stories as I continue to write more for you!
-        </p>
-    </div>
 </div>
+
+<div class="author-content">
+    <h3>My Journey as an Author</h3>
+    <p>
+        Welcome to my blog! I'm the author of <em>*The Ring*</em>, and I'm excited to share my creative journey with you. 
+        Writing has always been my passion, and this book is a dream come true. For the people who have read the book, 
+        you know that it is still not completed and you should also know that Infinite Chronicles is the series name and 
+        to understand this complex world, you will have to read all the books in the series which I will post soon. 
+        <em>"The Ring"</em> is just the first book. Stay tuned for updates and behind-the-scenes stories as I continue 
+        to write more for you!
+    </p>
+</div>
+
+
 
 
     <!-- Footer -->
