--- a/index.html
+++ b/index.html
@@ -170,13 +170,36 @@ James shot up in bed, his chest heaving as if he’d been running for miles. Swe
 <!-- About Author -->
 <style>
     .about-author {
-        position: relative;
         padding: 20px;
-        background-color: #f5f5f5; /* Optional: Just to make it more readable */
+        background-color: #f5f5f5;
         border-radius: 8px;
         display: flex;
         justify-content: space-between;
         align-items: center;
+    }
+
+    .about-author h2 {
+        color: #ffcc00;
+        font-size: 24px;
+    }
+
+    .author-content {
+        background-color: #4d4d4d;
+        padding: 20px;
+        border-radius: 8px;
+        border: 1px solid #ffcc00;
+        color: #e0e0e0; /* Text color for the container */
+    }
+
+    .author-content h3 {
+        color: #ffcc00; /* Heading color */
+        font-size: 20px;
+    }
+
+    .author-content p {
+        color: #e0e0e0; /* Body text color */
+        font-size: 16px;
+        line-height: 1.6;
     }
 </style>
 
