--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ James shot up in bed, his chest heaving as if he’d been running for miles. Swe
     .about-author h2 {
         color: #ffcc00;
         font-size: 24px;
+        font-family: 'Georgia', serif;
     }
 
     .author-content {
@@ -188,16 +189,18 @@ James shot up in bed, his chest heaving as if he’d been running for miles. Swe
         padding: 20px;
         border-radius: 8px;
         border: 1px solid #ffcc00;
-        color: #e0e0e0; /* Text color for the container */
+        color: #e0e0e0 !important;
+        font-family: 'Georgia', serif;
     }
 
     .author-content h3 {
-        color: #ffcc00; /* Heading color */
+        color: #ffcc00 !important;
         font-size: 20px;
+        font-style: italic;
     }
 
     .author-content p {
-        color: #e0e0e0; /* Body text color */
+        color: #e0e0e0 !important;
         font-size: 16px;
         line-height: 1.6;
     }
@@ -221,7 +224,6 @@ James shot up in bed, his chest heaving as if he’d been running for miles. Swe
         to write more for you!
     </p>
 </div>
-
 
 
 
