--- a/index.html
+++ b/index.html
@@ -167,42 +167,16 @@ James shot up in bed, his chest heaving as if he’d been running for miles. Swe
         </div>
     </div>
 
-<!-- About Author -->
+    <!-- About Author -->
 <style>
     .about-author {
+        position: relative;
         padding: 20px;
-        background-color: #f5f5f5;
+        background-color: #f5f5f5; /* Optional: Just to make it more readable */
         border-radius: 8px;
         display: flex;
         justify-content: space-between;
         align-items: center;
-    }
-
-    .about-author h2 {
-        color: #ffcc00;
-        font-size: 24px;
-        font-family: 'Georgia', serif;
-    }
-
-    .author-content {
-        background-color: #4d4d4d;
-        padding: 20px;
-        border-radius: 8px;
-        border: 1px solid #ffcc00;
-        color: #e0e0e0 !important;
-        font-family: 'Georgia', serif;
-    }
-
-    .author-content h3 {
-        color: #ffcc00 !important;
-        font-size: 20px;
-        font-style: italic;
-    }
-
-    .author-content p {
-        color: #e0e0e0 !important;
-        font-size: 16px;
-        line-height: 1.6;
     }
 </style>
 
@@ -224,6 +198,7 @@ James shot up in bed, his chest heaving as if he’d been running for miles. Swe
         to write more for you!
     </p>
 </div>
+
 
 
 
