--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ The path ahead was unclear, but one thing was certain—his life, as he knew it,
         <h2>About the Author</h2>
         <div class="blog-post">
             <h3>My Journey as an Author</h3>
-            <p>Welcome to my blog! I’m the author of *the Ring*, and I’m excited to share my creative journey with you. Writing has always been my passion, and this book is a dream come true. For the people who have read the book, you know that it is still not completed and you should also know that infinite chronicles is the series name and to understand this complex world, you will have to read all the books in the series which i will post soon. "The Ring" is just the firstbook. Stay tuned for updates and behind-the-scenes stories as I continue to write more for you!</p>
+            <p>Welcome to my blog! I’m Sriram Pathruni the author of *the Ring*, and I’m excited to share my creative journey with you. Writing has always been my passion, and this book is a dream come true. For the people who have read the book, you know that it is still not completed and you should also know that infinite chronicles is the series name and to understand this complex world, you will have to read all the books in the series which i will post soon. "The Ring" is just the firstbook. Stay tuned for updates and behind-the-scenes stories as I continue to write more for you!</p>
         </div>
     </div>
 
