--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en"><head>
+   <meta name="google-site-verification" content="uZg1RanKKcC5RYvgVFB1xsM0p-vsCl59p6cWP6ok-fI" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
