--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <style>
         /* General Styling */
         body {
-            background-image: url('images/"C:\Users\srinivas\Desktop\fantasy world.jpg"')
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
+          margin:0 
+          min-height: 100vh;
+    background-image: url("bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
             font-family: 'Gabriola', sans-serif;
             font-size: 40px;
             color: white;
@@ -237,6 +240,7 @@ Cautiously, James slid the ring onto his finger. A jolt of energy shot up his ar
 
 
 </body></html>
+
 
 
 
