--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         /* General Styling */
         body {
-          margin:0 
+          margin:0; 
           min-height: 100vh;
     background-image: url("bg.jpg");
     background-size: cover;
@@ -240,6 +240,7 @@ Cautiously, James slid the ring onto his finger. A jolt of energy shot up his ar
 
 
 </body></html>
+
 
 
 
